// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > snapshots > render disabled  1`] = `
<body>
  <div>
    <button
      class="button classes here disabled primary"
      data-testid="xButton"
      disabled=""
      type="button"
    >
      Test
    </button>
  </div>
</body>
`;

exports[`Button > snapshots > render with defaults 1`] = `
<body>
  <div>
    <button
      class="button classes here disabled primary"
      data-testid="xButton"
      type="button"
    >
      Test
    </button>
  </div>
</body>
`;

exports[`Button > snapshots > render with props 1`] = `
<body>
  <div>
    <button
      class="button classes here disabled secondary foobar"
      data-testid="xFooBar"
      type="submit"
    >
      Test
    </button>
  </div>
</body>
`;
